# zellij-tabs

./: Cargo.toml  build.sh  shell.nix
src/: main.rs
zellij-tile-patched/: .cargo_vcs_info.json  Cargo.toml
zellij-tile-patched/src/: shim.rs
