[package]
name = "tabs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tabs"
path = "src/main.rs"

[dependencies]
zellij-tile = "0.44.3"
zellij-tile-utils = "0.44.3"
ansi_term = "0.12"
unicode-width = "0.1.8"
wasi = "0.14"

[patch.crates-io]
zellij-tile = { path = "zellij-tile-patched" }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
